--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -20,7 +20,7 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 
-		<header>
+		<header class="main-header">
 			<h1>📘 The Code Magazine</h1>
 
 			<nav>
@@ -29,7 +29,7 @@
 				<a href="#">Flexbox</a>
 				<a href="#">CSS Grid</a>
 			</nav>
-      <p>Test paragraph</p>
+
 		</header>
 
 		<article>
@@ -80,7 +80,7 @@
 			<p>In HTML, each element is made up of 3 parts:</p>
 
 			<ol>
-				<li>The opening tag</li>
+				<li class="first-li">The opening tag</li>
 				<li>The closing tag</li>
 				<li>The actual element</li>
 			</ol>
@@ -102,7 +102,7 @@
 			</p>
 
 			<ul>
-				<li>To be able to use the fundamental web dev language</li>
+				<li class="first-li">To be able to use the fundamental web dev language</li>
 				<li>
 					To hand-craft beautiful websites instead of relying on tools like
 					Worpress or Wix
